Completed wrapping of game into container element (no fixed positions inside), added support to delay game start until specific scroll position

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -34,12 +34,27 @@ body {
     z-index: @zGithub;
 }
 
-#container {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    position: fixed;
+.welcome-container {
+    background-color: #000000;
+    padding-bottom: 700px;
+    padding-top: 50px;
+}
+
+.game-container {
+
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+
+    &.fixed {
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        height: auto !important;
+        width: auto;
+    }
     background-color: @cMatteBlue;
     background-image: url("../assets/graphics/scene/world/matte/patterns/blue.jpg");
     background-repeat: repeat;
@@ -185,10 +200,10 @@ body {
     }
     .hud {
         z-index: @zHud;
+        top: 0;
         right: 0;
         bottom: 0;
         left: 0;
-        background: #000099;
         position: absolute;
 
         .dev-info {
@@ -201,7 +216,7 @@ body {
 
         .skill() {
             margin: 2px;
-            display: block;
+            display: inline-block;
             padding: 0 0 0 13px;
             transition: font-size 500ms;
             background: url("../assets/graphics/hud/skills/levels/beginner.gif") 0px 50% no-repeat;
@@ -240,32 +255,28 @@ body {
         .skill-basket {
             display: block;
             position: absolute;
-            left: 500px;
-            top: 0;
+            bottom: 0;
+            background-color: #000000;
+            left: 700px;
+            height: 200px;
             width: 320px;
 
             li {
                 .skill();
-                float: left;
             }
         }
         .skill-basket-info {
-            position: absolute;
             left: 230px;
-            top: 0;
-            li {
-                .skill();
-            }
         }
         .year-display {
-            position: fixed;
+            position: absolute;
             top: 10px;
             left: 10px;
             font-size: 100px;
             font-weight: bold;
         }
         .height-display {
-            position: fixed;
+            position: absolute;
             top: 150px;
             left: 10px;
             font-size: 100px;
@@ -277,7 +288,8 @@ body {
         .timeline {
             right: 0;
             width: 50%;
-            height: 100%;
+            height: 300px;
+            bottom: 0;
             position: absolute;
 
             .event-wrapper {
